api with nodal start

--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,9 @@
-/.idea/.name
-/.idea/Predictable.iml
-/.idea/encodings.xml
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/vcs.xml
-/.idea/workspace.xml
-/app/bower_components/OnsenUI/.bower.json
-/app/bower_components/OnsenUI/CHANGELOG.md
-/app/bower_components/OnsenUI/LICENSE
-/app/bower_components/OnsenUI/README.md
-/app/bower_components/OnsenUI/bower.json
-/app/bower_components/OnsenUI/css/font_awesome/css/font-awesome.css
-/app/bower_components/OnsenUI/css/font_awesome/css/font-awesome.min.css
-/app/bower_components/OnsenUI/css/font_awesome/fonts/FontAwesome.otf
-/app/bower_components/OnsenUI/css/font_awesome/fonts/fontawesome-webfont.eot
-/app/bower_components/OnsenUI/css/font_awesome/fonts/fontawesome-webfont.svg
-/app/bower_components/OnsenUI/css/font_awesome/fonts/fontawesome-webfont.ttf
-/app/bower_components/OnsenUI/css/font_awesome/fonts/fontawesome-webfont.woff
-/app/bower_components/OnsenUI/css/ionicons/css/ionicons.css
-/app/bower_components/OnsenUI/css/ionicons/css/ionicons.min.css
-/app/bower_components/OnsenUI/css/ionicons/fonts/ionicons.eot
-/app/bower_components/OnsenUI/css/ionicons/fonts/ionicons.svg
-/app/bower_components/OnsenUI/css/ionicons/fonts/ionicons.ttf
-/app/bower_components/OnsenUI/css/ionicons/fonts/ionicons.woff
-/app/bower_components/OnsenUI/css/onsen-css-components-blue-basic-theme.css
-/app/bower_components/OnsenUI/css/onsen-css-components-blue-theme.css
-/app/bower_components/OnsenUI/css/onsen-css-components-dark-theme.css
-/app/bower_components/OnsenUI/css/onsen-css-components-default.css
-/app/bower_components/OnsenUI/css/onsen-css-components-purple-theme.css
-/app/bower_components/OnsenUI/css/onsen-css-components-sunshine-theme.css
-/app/bower_components/OnsenUI/css/onsen-css-components.css
-/app/bower_components/OnsenUI/css/onsenui.css
-/app/bower_components/OnsenUI/js/onsenui.js
-/app/bower_components/OnsenUI/js/onsenui.min.js
-/app/bower_components/OnsenUI/js/onsenui_all.js
-/app/bower_components/OnsenUI/js/onsenui_all.min.js
-/app/bower_components/OnsenUI/stylus/blue-basic-theme.styl
-/app/bower_components/OnsenUI/stylus/blue-theme.styl
-/app/bower_components/OnsenUI/stylus/components/alert-dialog.styl
-/app/bower_components/OnsenUI/stylus/components/button-bar.styl
-/app/bower_components/OnsenUI/stylus/components/button.styl
-/app/bower_components/OnsenUI/stylus/components/checkbox.styl
-/app/bower_components/OnsenUI/stylus/components/dialog.styl
-/app/bower_components/OnsenUI/stylus/components/global.styl
-/app/bower_components/OnsenUI/stylus/components/index.styl
-/app/bower_components/OnsenUI/stylus/components/list.styl
-/app/bower_components/OnsenUI/stylus/components/modal.styl
-/app/bower_components/OnsenUI/stylus/components/navigation-bar.styl
-/app/bower_components/OnsenUI/stylus/components/notification.styl
-/app/bower_components/OnsenUI/stylus/components/page.styl
-/app/bower_components/OnsenUI/stylus/components/popover.styl
-/app/bower_components/OnsenUI/stylus/components/radio-button.styl
-/app/bower_components/OnsenUI/stylus/components/range.styl
-/app/bower_components/OnsenUI/stylus/components/search-input.styl
-/app/bower_components/OnsenUI/stylus/components/switch.styl
-/app/bower_components/OnsenUI/stylus/components/tab-bar.styl
-/app/bower_components/OnsenUI/stylus/components/text-input.styl
-/app/bower_components/OnsenUI/stylus/components/textarea.styl
-/app/bower_components/OnsenUI/stylus/components/toolbar-button.styl
-/app/bower_components/OnsenUI/stylus/components/util.styl
-/app/bower_components/OnsenUI/stylus/dark-theme.styl
-/app/bower_components/OnsenUI/stylus/purple-theme.styl
-/app/bower_components/OnsenUI/stylus/sunshine-theme.styl
-/app/bower_components/angular/.bower.json
-/app/bower_components/angular/LICENSE.md
-/app/bower_components/angular/README.md
-/app/bower_components/angular/angular-csp.css
-/app/bower_components/angular/angular.js
-/app/bower_components/angular/angular.min.js
-/app/bower_components/angular/angular.min.js.gzip
-/app/bower_components/angular/angular.min.js.map
-/app/bower_components/angular/bower.json
-/app/bower_components/angular/index.js
-/app/bower_components/angular/package.json
+node_modules
+dist
+bower_components
+.tmp
+.publish/
+platforms
+.idea
+/app/plugins
+/*.log
