--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,11 @@
   "license": "MIT",
   "dependencies": {
     "OnsenUI": "onsenui#^1.3.14",
-    "angular": "^1.5.6"
+    "angular": "^1.5.6",
+    "angular-route": "^1.5.8",
+    "angular-sanitize": "^1.5.8",
+    "angular-animate": "^1.5.8",
+    "angular-touch": "^1.5.8"
   },
   "resolutions": {
     "angular": "^1.5.6"
