--- a/predictable-app/bower.json
+++ b/predictable-app/bower.json
@@ -11,7 +11,8 @@
     "angular-route": "^1.5.8",
     "angular-sanitize": "^1.5.8",
     "angular-animate": "^1.5.8",
-    "angular-touch": "^1.5.8"
+    "angular-touch": "^1.5.8",
+    "angular-oauth2": "^4.0.0"
   },
   "resolutions": {
     "angular": "^1.5.6"
